[gd_scene load_steps=5 format=3 uid="uid://b1eaivgv5cofo"]

[ext_resource type="Theme" uid="uid://bjysepqligucr" path="res://assets/ui/GeneralTheme.tres" id="1_7k2d0"]
[ext_resource type="Script" path="res://game/random_menu/RandomHub.gd" id="2_1yoql"]
[ext_resource type="PackedScene" uid="uid://uoquxrowsye8" path="res://game/settings/SettingsScreen.tscn" id="3_6ijuv"]
[ext_resource type="Theme" uid="uid://rcuwhge3555x" path="res://assets/ui/DarkFont.tres" id="4_jxjxy"]

[node name="RandomHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7k2d0")
script = ExtResource("2_1yoql")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
offset_bottom = 95.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 150
text = "RANDOM_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Difficulties" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Difficulties"]
layout_mode = 2
theme_override_constants/separation = 75
alignment = 1

[node name="Continue" type="Button" parent="Difficulties/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
auto_translate = false
localize_numeral_system = false
focus_mode = 0
text = "CONTINUE - EASY_BUTTON"

[node name="ContinueSeparator" type="HSeparator" parent="Difficulties/VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Easy" type="Button" parent="Difficulties/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_mode = 0
text = "EASY_BUTTON"

[node name="Medium" type="Button" parent="Difficulties/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_mode = 0
text = "MEDIUM_BUTTON"

[node name="Hard" type="Button" parent="Difficulties/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_mode = 0
text = "HARD_BUTTON"

[node name="Expert" type="Button" parent="Difficulties/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_mode = 0
text = "EXPERT_BUTTON"

[node name="Insane" type="Button" parent="Difficulties/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_mode = 0
text = "INSANE_BUTTON"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 75.0
offset_top = 75.0
focus_mode = 0
text = "BACK"

[node name="CustomSeedButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3790.0
offset_top = -109.0
offset_right = -3379.0
offset_bottom = -49.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "USE_CUSTOM_SEED"

[node name="Seed" type="LineEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3780.0
offset_top = -126.0
offset_right = -3495.0
offset_bottom = -49.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 60
placeholder_text = "SEED"
max_length = 10
virtual_keyboard_type = 2
deselect_on_focus_loss_enabled = false
select_all_on_focus = true

[node name="SettingsScreen" parent="." instance=ExtResource("3_6ijuv")]

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
grow_vertical = 2
theme = ExtResource("4_jxjxy")
metadata/_edit_group_ = true

[node name="CompletedCount" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PanelContainer/CompletedCount"]
layout_mode = 2
text = "RANDOM_COMPLETED"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/CompletedCount"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Easy" type="MarginContainer" parent="PanelContainer/CompletedCount"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBox" type="HBoxContainer" parent="PanelContainer/CompletedCount/Easy"]
layout_mode = 2

[node name="Difficulty" type="Label" parent="PanelContainer/CompletedCount/Easy/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "EASY_BUTTON"

[node name="Count" type="Label" parent="PanelContainer/CompletedCount/Easy/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "999
"
horizontal_alignment = 2

[node name="Medium" type="MarginContainer" parent="PanelContainer/CompletedCount"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBox" type="HBoxContainer" parent="PanelContainer/CompletedCount/Medium"]
layout_mode = 2

[node name="Difficulty" type="Label" parent="PanelContainer/CompletedCount/Medium/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "MEDIUM_BUTTON"

[node name="Count" type="Label" parent="PanelContainer/CompletedCount/Medium/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "999
"
horizontal_alignment = 2

[node name="Hard" type="MarginContainer" parent="PanelContainer/CompletedCount"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBox" type="HBoxContainer" parent="PanelContainer/CompletedCount/Hard"]
layout_mode = 2

[node name="Difficulty" type="Label" parent="PanelContainer/CompletedCount/Hard/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "HARD_BUTTON"

[node name="Count" type="Label" parent="PanelContainer/CompletedCount/Hard/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "999
"
horizontal_alignment = 2

[node name="Expert" type="MarginContainer" parent="PanelContainer/CompletedCount"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBox" type="HBoxContainer" parent="PanelContainer/CompletedCount/Expert"]
layout_mode = 2

[node name="Difficulty" type="Label" parent="PanelContainer/CompletedCount/Expert/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "EXPERT_BUTTON"

[node name="Count" type="Label" parent="PanelContainer/CompletedCount/Expert/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "999
"
horizontal_alignment = 2

[node name="Insane" type="MarginContainer" parent="PanelContainer/CompletedCount"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBox" type="HBoxContainer" parent="PanelContainer/CompletedCount/Insane"]
layout_mode = 2

[node name="Difficulty" type="Label" parent="PanelContainer/CompletedCount/Insane/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "INSANE_BUTTON"

[node name="Count" type="Label" parent="PanelContainer/CompletedCount/Insane/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "999
"
horizontal_alignment = 2

[node name="MarathonLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 2746.0
offset_top = 1850.0
offset_right = 3804.0
offset_bottom = 1982.0
theme_override_font_sizes/font_size = 50
text = "MARATHON_TEXT"
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 3

[node name="Marathon" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -435.0
offset_top = -103.0
offset_right = -53.0
offset_bottom = -43.0
grow_horizontal = 0
grow_vertical = 0

[node name="Button" type="Button" parent="Marathon"]
layout_mode = 2
tooltip_text = "MARATHON_TOOLTIP"
focus_mode = 0
theme_override_font_sizes/font_size = 60
text = "MARATHON_MODE"

[node name="Slider" type="SpinBox" parent="Marathon"]
visible = false
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1
update_on_text_changed = true
select_all_on_focus = true

[connection signal="mouse_entered" from="Difficulties/VBox/Continue" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Difficulties/VBox/Continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="Difficulties/VBox/Easy" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Difficulties/VBox/Easy" to="." method="_on_dif_pressed" binds= [0]]
[connection signal="mouse_entered" from="Difficulties/VBox/Medium" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Difficulties/VBox/Medium" to="." method="_on_dif_pressed" binds= [1]]
[connection signal="mouse_entered" from="Difficulties/VBox/Hard" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Difficulties/VBox/Hard" to="." method="_on_dif_pressed" binds= [2]]
[connection signal="mouse_entered" from="Difficulties/VBox/Expert" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Difficulties/VBox/Expert" to="." method="_on_dif_pressed" binds= [3]]
[connection signal="mouse_entered" from="Difficulties/VBox/Insane" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Difficulties/VBox/Insane" to="." method="_on_dif_pressed" binds= [4]]
[connection signal="mouse_entered" from="Back" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="CustomSeedButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CustomSeedButton" to="." method="_on_custom_seed_button_pressed"]
[connection signal="pressed" from="Marathon/Button" to="." method="_on_marathon_button_pressed"]
[connection signal="value_changed" from="Marathon/Slider" to="." method="_on_marathon_value_changed"]
